--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ h1 {
     text-shadow: 0 0 25px rgb(64, 64, 192), 0 0 5px darkblue;
 }
 
+li {
+    text-align: left;
+}
+
+
 iframe {
     width: 600px;
     margin-left: 30px;
